Deuxième commite le 03/03/2021

--- a/accueil/templates/header.html
+++ b/accueil/templates/header.html
@@ -170,3 +170,53 @@
       </div>
    </div>
 </section>
+
+
+{% block barrenave %}
+
+<div class="px-0 bg-primary navbar-expand-lg ftco_navbar ftco-navbar-light" id="ftco-navbar">
+   <div class="container">
+      <div class="row">
+         <div class="col-md-12">
+            <nav class="navbar px-0 navbar-expand-lg navbar-light">
+               <a class="navbar-brand" href="{% url 'accueil:index-accueil' %}">C-Transports</a>
+
+               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
+                  aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="oi oi-menu"></span>
+               </button>
+
+               <div class="collapse navbar-collapse" id="ftco-nav">
+                  <ul class="navbar-nav ml-auto">
+                     <li class="nav-item mr-2 mt-2">
+                        <a href="" type="button" class="btn btn-info btn-formulaire-achat" data-toggle="modal"
+                           data-target="#tableau-bord-departs">Départs <i class="ion-ios-arrow-round-up"></i> <i class="ion-ios-arrow-round-up"></i> <i class="ion-ios-arrow-round-up"></i></a>
+                     </li>
+                     <li class="nav-item mt-2">
+                        <a href="" type="bytton" class="btn btn-info btn-formulaire-achat" data-toggle="modal"
+                           data-target="#tableau-bord-arrivees">Arrivées <i class="ion-ios-arrow-round-down"></i> <i class="ion-ios-arrow-round-down"></i> <i class="ion-ios-arrow-round-down"></i></a>
+                     </li>
+                     <li class="dropdown nav-item d-flex">
+                        <a href="#" class="dropdown-toggle nav-link d-flex align-items-center icon"
+                           data-toggle="dropdown">
+                           <b class="lien-partenaire">Nos partenaires</b>
+                           <b class="caret"></b>
+                        </a>
+
+                        <div class="dropdown-menu dropdown-menu-right">
+                           {% for agence in agence %}
+                           <a href="{% url 'agence:agence' agence.id %}" class="dropdown-item">{{ agence.nom }}</a>
+                           {% endfor %}
+                           <div class="dropdown-divider">
+                           </div>
+                           <a href="#" class="dropdown-item">Devenir partenaire</a>
+                        </div>
+                     </li>
+                  </ul>
+               </div>
+            </nav>
+         </div>
+      </div>
+   </div>
+</div>
+{% endblock barrenave %}
