--- a/achat/templates/ticket.html
+++ b/achat/templates/ticket.html
@@ -48,7 +48,7 @@
     <div class="container my-5">
         <div class="alert alert-success">
             <b>Bravo {{ contact_detail.first_name }}, Merci d'avoir privilégié notre service pour l'achat de votre ticket de transport </b> <br>
-            <p>Vous pouvez signaler sur <a href="">cette page</a> en cas de remarque, ou si vous avez des suggestions particuliers <br> vous serez alerté pour tous nouvels voyages 👌 </p>
+            <p>Vous pouvez signaler sur <a href="">cette page</a> en cas de remarque, ou si vous avez des suggestions particuliers <br> vous serez alerté pour tout nouvau de votre voyages 👌 </p>
         </div>
         <div class="row">
             <div class="col-md-5">
