--- a/utilisateur/templates/information.html
+++ b/utilisateur/templates/information.html
@@ -37,12 +37,12 @@
             <ul class="nav nav-pills nav-fill d-md-flex d-block w-100 bg-info">
                 <li class="nav-item px-lg-2">
                     <a class="nav-link active py-3 px-0" data-toggle="tab" href="#infos-personnelles"><span
-                            class="ion-ios-airplae">Informations personnelles</span></a>
+                            class="ion-ios-airplae">Client sans abonnement</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link py-3 h-100" data-toggle="tab" href="#formulaire-abonnement"><span
                             class="ion-ios-bu"></span>
-                        Je dispose d'un code d'abonnement</a>
+                        Client avec abonnement</a>
                 </li>
             </ul>
         </div>
